@@ -854,8 +854,11 @@
       in the tarball, but would include it in the vignette database,
       leading to a check warning.  (\PR{17246})
       
-      \item \code{tools::latexToUtf8} went into an infinite loop 
+      \item \code{tools::latexToUtf8()} went into an infinite loop 
       when given certain inputs.  (\PR{17138})
+      
+      \item \code{terms.formula()} ignored argument names when determining
+      whether two terms were identical.  (\PR{17235})
     }
   }
 }
